# TestDRF

./: .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  env.sample  pyproject.toml
accounts/: managers.py  models.py  serializers.py  urls.py  views.py
accounts/fixtures/: users.json
accounts/migrations/: 0001_initial.py
core/: celery.py  settings.py  urls.py
orders/: models.py  serializers.py  tasks.py  views.py
orders/migrations/: 0001_initial.py
products/: models.py  serializers.py  views.py
products/migrations/: 0001_initial.py
tests/: conftest.py  test_accounts.py  test_orders.py  test_products.py
