[project]
name = "Test_project_for_nextgen"
version = "0.1.0"
description = "Django testing project"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.6",
    "django-admin>=2.0.2",
    "django-filter>=25.1",
    "djangorestframework>=3.16.1",
    "markdown>=3.9",
    "psycopg2-binary>=2.9.10",
]
